--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 bimap = "0.6.3"
-rayon = "1.10.0"
+rayon = { version = "1.10.0", optional = true }
 thunderdome = "0.6.1"
+
+[features]
+multithreaded = ["rayon"]
 
 [dev-dependencies]
 macroquad = "0.4.13"
