--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rayon = { version = "1.10.0", optional = true }
 
 [features]
 multithreaded = ["rayon"]
+track_dead_entities = []
 
 [dev-dependencies]
 macroquad = "0.4.13"
